[package]
name = "stest"
version = "0.1.0"
authors = ["opensourcegeek <praveen.kumar@nomadrail.com>"]

[features]
ssl = ["hyper/ssl"]

[dependencies]
xml-rs = "0.3"
time = "0.1"
clap = "2.19.1"
csv = "0.14.7"
chrono = "0.2"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.hyper]
version = "0.9"
default-features = false
