[package]
name = "stest"
version = "0.6.3"
authors = ["opensourcegeek <3.pravin@gmail.com>"]

[features]
ssl = ["hyper/ssl"]

[dependencies]
xml-rs = "0.3"
time = "0.1"
clap = "2.19.1"
csv = "0.14.7"
chrono = "0.2"
rand = "0.3"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.hyper]
version = "0.9"
default-features = false

