[package]
name = "stest"
version = "0.7.0"
authors = ["opensourcegeek <3.pravin@gmail.com>"]

[dependencies]
xml-rs = "0.3"
time = "0.1"
clap = "2.19.1"
csv = "0.14.7"
chrono = "0.2"
rand = "0.3"
hyper-timeout-connector = "0.1.0"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.hyper]
version = "0.10"
default-features = false

[lib]
name = "stest_lib"
path = "src/lib.rs"

[[bin]]
name = "stest"
path = "src/main.rs"
